--- a/ProjectModern/ProjectModern/ProjectModern.vcxproj
+++ b/ProjectModern/ProjectModern/ProjectModern.vcxproj
@@ -131,7 +131,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Film.cpp" />
+    <ClCompile Include="Login.cpp" />
+    <ClCompile Include="MovieFiltering.cpp" />
     <ClCompile Include="ProjectModern.cpp" />
+    <ClCompile Include="Register.cpp" />
+    <ClCompile Include="User.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Film.h" />
+    <ClInclude Include="IRegister.h" />
+    <ClInclude Include="Login.h" />
+    <ClInclude Include="MovieFiltering.h" />
+    <ClInclude Include="Register.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
