--- a/ProjectModern/ProjectModern/ProjectModern.vcxproj.filters
+++ b/ProjectModern/ProjectModern/ProjectModern.vcxproj.filters
@@ -53,5 +53,13 @@
     <ClInclude Include="Register.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Parser.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="netflix_titles.csv">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
