Created Storage header for database. Updated the database to have the appropriate columns for the user table.

--- a/ProjectModern/ProjectModern/ProjectModern.vcxproj
+++ b/ProjectModern/ProjectModern/ProjectModern.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="MovieFiltering.h" />
     <ClInclude Include="Parser.h" />
     <ClInclude Include="Register.h" />
+    <ClInclude Include="Storage.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
   <ItemGroup>
