--- a/ProjectModern/ProjectModern/ProjectModern.vcxproj
+++ b/ProjectModern/ProjectModern/ProjectModern.vcxproj
@@ -77,6 +77,8 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalOptions>/D _SILENCE_ALL_CXX20_DEPRECATION_WARNINGS /D _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS 
+ %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -107,6 +109,8 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalOptions>/D _SILENCE_ALL_CXX20_DEPRECATION_WARNINGS /D _SILENCE_ALL_CXX17_DEPRECATION_WARNINGS 
+ %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -133,16 +137,19 @@
   <ItemGroup>
     <ClCompile Include="Cluster.cpp" />
     <ClCompile Include="Film.cpp" />
+    <ClCompile Include="KMeans.cpp" />
     <ClCompile Include="Login.cpp" />
     <ClCompile Include="MovieFiltering.cpp" />
     <ClCompile Include="ProjectModern.cpp" />
     <ClCompile Include="Register.cpp" />
+    <ClCompile Include="Storage.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cluster.h" />
     <ClInclude Include="Film.h" />
     <ClInclude Include="IRegister.h" />
+    <ClInclude Include="KMeans.h" />
     <ClInclude Include="Login.h" />
     <ClInclude Include="MovieFiltering.h" />
     <ClInclude Include="Parser.h" />
