--- a/ProjectModern/ProjectModern/ProjectModern.vcxproj
+++ b/ProjectModern/ProjectModern/ProjectModern.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClCompile Include="Cluster.cpp" />
     <ClCompile Include="Film.cpp" />
+    <ClCompile Include="ILogin.cpp" />
     <ClCompile Include="KMeans.cpp" />
     <ClCompile Include="Login.cpp" />
     <ClCompile Include="MovieFiltering.cpp" />
@@ -148,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="Cluster.h" />
     <ClInclude Include="Film.h" />
+    <ClInclude Include="ILogin.h" />
     <ClInclude Include="IRegister.h" />
     <ClInclude Include="KMeans.h" />
     <ClInclude Include="Login.h" />
