Upgraded tests and added coverage

--- a/ProjectModern/ProjectTest/ProjectTest.vcxproj
+++ b/ProjectModern/ProjectTest/ProjectTest.vcxproj
@@ -48,6 +48,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectModern\ProjectModern.vcxproj">
+      <Project>{c84701c3-53e7-4ddf-9d74-02cb85b08f87}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <ItemDefinitionGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
