Added tests for Login class

--- a/ProjectModern/ProjectTest/ProjectTest.vcxproj
+++ b/ProjectModern/ProjectTest/ProjectTest.vcxproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <ClCompile Include="Cluster_test.cpp" />
     <ClCompile Include="Film_test.cpp" />
+    <ClCompile Include="Login_test.cpp" />
     <ClCompile Include="User_test.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -92,7 +93,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <AdditionalLibraryDirectories>$(SolutionDir)ProjectModern\$(Platform)\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>User.obj;Film.obj;Cluster.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>User.obj;Film.obj;Cluster.obj;Login.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
