--- a/ProjectModern/ProjectTest/ProjectTest.vcxproj.filters
+++ b/ProjectModern/ProjectTest/ProjectTest.vcxproj.filters
@@ -11,6 +11,9 @@
     <ClCompile Include="Cluster_test.cpp">
       <Filter>Test_source</Filter>
     </ClCompile>
+    <ClCompile Include="Login_test.cpp">
+      <Filter>Test_source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
